--- a/index.html
+++ b/index.html
@@ -282,31 +282,128 @@
 
                 </div>
 
-                <div class = "mainCard">
+                <div class = "mainCardBundle">
 
-                    <div class = "upperCard">
+                        <div class = "upperCard">
 
-                    <img class = "cardImage" src = "images/oceanStatsScreen.jpg" draggable="false">
+                            <div class = "slideButtonLeft" onclick="getBundleName(firstFive,this)"><i class="fas fa-chevron-left"></i></div>
+                            <div class = "slideButtonRight" onclick="getBundleName(firstFive,this)"><i class="fas fa-chevron-right"></i></div>
 
-                    </div>
-                    <div class = "lowerCard">
+                            <img class = "cardImage" src = "images/firstFiveScreen.jpg" draggable="false" id = "firstFive" draggable="false">
 
-                    <h3 class = "cardTitle"> Simple Ocean Stats </h3>
+                        </div>
+                        <div class = "lowerCard">
 
-                    <div class = "infoSection">
-                      <div>
-                    <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                    <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
-                    </div>
-                    <div>
-                    <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
-                    <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
-                  </div>
-                    </div>
+                            <h3 class = "cardTitle"> 5 for the price of 3 (#1) </h3>
 
-                    <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3346" target = "_blank" draggable="false"><button class = "cardButton"> $1.99 </button></a>
+                            <div class = "infoSection">
+                              <div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            </div>
+                            <div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                          </div>
+                            </div>
 
-                    </div>
+                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=4385-3374" target = "_blank" draggable="false"><button class = "cardButton"> $5.97 </button></a>
+
+                        </div>
+
+                </div>
+
+                <div class = "mainCardBundle">
+
+                        <div class = "upperCard">
+
+                            <div class = "slideButtonLeft" onclick="getBundleName(secondFive,this)"><i class="fas fa-chevron-left"></i></div>
+                            <div class = "slideButtonRight" onclick="getBundleName(secondFive,this)"><i class="fas fa-chevron-right"></i></div>
+
+                            <img class = "cardImage" src = "images/secondFiveScreen.jpg" draggable="false" id = "secondFive" draggable="false">
+
+                        </div>
+                        <div class = "lowerCard">
+
+                            <h3 class = "cardTitle"> 5 for the price of 3 (#2) </h3>
+
+                            <div class = "infoSection">
+                              <div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            </div>
+                            <div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                          </div>
+                            </div>
+
+                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=4386-3374" target = "_blank" draggable="false"><button class = "cardButton"> $5.97 </button></a>
+
+                        </div>
+
+                </div>
+
+                <div class = "mainCardBundle">
+
+                        <div class = "upperCard">
+
+                            <div class = "slideButtonLeft" onclick="getBundleName(thirdFive,this)"><i class="fas fa-chevron-left"></i></div>
+                            <div class = "slideButtonRight" onclick="getBundleName(thirdFive,this)"><i class="fas fa-chevron-right"></i></div>
+
+                            <img class = "cardImage" src = "images/thirdFiveScreen.jpg" draggable="false" id = "thirdFive" draggable="false">
+
+                        </div>
+                        <div class = "lowerCard">
+
+                            <h3 class = "cardTitle"> 5 for the price of 3 (#3) </h3>
+
+                            <div class = "infoSection">
+                              <div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            </div>
+                            <div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                          </div>
+                            </div>
+
+                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=4387-3374" target = "_blank" draggable="false"><button class = "cardButton"> $5.97 </button></a>
+
+                        </div>
+
+                </div>
+
+                <div class = "mainCardBundle">
+
+                        <div class = "upperCard">
+
+                            <div class = "slideButtonLeft" onclick="getBundleName(fourthFive,this)"><i class="fas fa-chevron-left"></i></div>
+                            <div class = "slideButtonRight" onclick="getBundleName(fourthFive,this)"><i class="fas fa-chevron-right"></i></div>
+
+                            <img class = "cardImage" src = "images/fourthFiveScreen.jpg" draggable="false" id = "fourthFive" draggable="false">
+
+                        </div>
+                        <div class = "lowerCard">
+
+                            <h3 class = "cardTitle"> 5 for the price of 3 (#4) </h3>
+
+                            <div class = "infoSection">
+                              <div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            </div>
+                            <div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                          </div>
+                            </div>
+
+                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=4388-3374" target = "_blank" draggable="false"><button class = "cardButton"> $5.97 </button></a>
+
+                        </div>
+
                 </div>
 
                 <div class = "mainCard">
@@ -334,6 +431,33 @@
                     </div>
 
                     <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3433" target = "_blank" draggable="false"><button class = "cardButton"> $1.99 </button></a>
+
+                    </div>
+                </div>
+
+                <div class = "mainCard">
+
+                    <div class = "upperCard">
+
+                    <img class = "cardImage" src = "images/oceanStatsScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                    <h3 class = "cardTitle"> Simple Ocean Stats </h3>
+
+                    <div class = "infoSection">
+                      <div>
+                    <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                    <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                    </div>
+                    <div>
+                    <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                    <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                  </div>
+                    </div>
+
+                    <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3346" target = "_blank" draggable="false"><button class = "cardButton"> $1.99 </button></a>
 
                     </div>
                 </div>
@@ -422,8 +546,6 @@
                 </div>
 
                 <div class = "mainCard">
-
-                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -560,9 +682,9 @@
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
+                <div class = "mainCard">
 
-                    <div class = "markedButton"> Soon </div>
+                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -584,7 +706,7 @@
                       </div>
                         </div>
 
-                       <button class = "cardButton"> $1.99</button>
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4251" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                     </div>
                 </div>
