--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div class = "mainCardBundle">
 
-                <div class = "markedButton"> Save 61% </div>
+                <div class = "markedButton"> Save 63% </div>
 
                 <div class = "upperCard">
 
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (26+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (27+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -263,7 +263,7 @@
                         </div>
                         <div class = "lowerCard">
 
-                            <h3 class = "cardTitle"> Shapes Bundle (3+) </h3>
+                            <h3 class = "cardTitle"> Shapes Bundle (4+) </h3>
 
                             <div class = "infoSection">
                               <div>
@@ -276,7 +276,7 @@
                           </div>
                             </div>
 
-                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3978" target = "_blank" draggable="false"><button class = "cardButton"> $4.00 </button></a>
+                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3978" target = "_blank" draggable="false"><button class = "cardButton"> $4.99 </button></a>
 
                         </div>
 
@@ -522,6 +522,35 @@
 
                     <div class = "upperCard">
 
+                        <img class = "cardImage" src = "images/splashScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Splash </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <button class = "cardButton"> $1.99</button>
+
+                    </div>
+                </div>
+
+                <div class = "mainCardSoon">
+
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
                         <img class = "cardImage" src = "images/snakeScreen.jpg" draggable="false">
 
                     </div>
@@ -682,9 +711,9 @@
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
+                <div class = "mainCard">
 
-                    <div class = "markedButton"> Soon </div>
+                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -706,7 +735,7 @@
                       </div>
                         </div>
 
-                       <button class = "cardButton"> $1.99</button>
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4272" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                     </div>
                 </div>
@@ -908,8 +937,6 @@
                         </div>
 
                         <div class = "mainCard">
-
-                            <div class = "markedButton"> New </div>
 
                             <div class = "upperCard">
 
