--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div class = "mainCardBundle">
 
-                <div class = "markedButton"> Save 64% </div>
+                <div class = "markedButton"> Save 65% </div>
 
                 <div class = "upperCard">
 
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (28+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (29+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -544,6 +544,7 @@
 
                     </div>
                 </div>
+
                 <div class = "mainCardSoon">
 
                     <div class = "markedButton"> Soon </div>
@@ -556,6 +557,35 @@
                     <div class = "lowerCard">
 
                         <h3 class = "cardTitle"> Blue Splash </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <button class = "cardButton"> $1.99</button>
+
+                    </div>
+                </div>
+
+                <div class = "mainCardSoon">
+
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
+                        <img class = "cardImage" src = "images/jungleScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Jungle </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -683,9 +713,9 @@
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
+                <div class = "mainCard">
 
-                    <div class = "markedButton"> Soon </div>
+                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -707,7 +737,7 @@
                       </div>
                         </div>
 
-                       <button class = "cardButton"> $1.99</button>
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4421" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                     </div>
                 </div>
