--- a/index.html
+++ b/index.html
@@ -545,9 +545,9 @@
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
+                <div class = "mainCard">
 
-                    <div class = "markedButton"> Soon </div>
+                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -569,7 +569,7 @@
                       </div>
                         </div>
 
-                       <button class = "cardButton"> $1.99</button>
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4590" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                     </div>
                 </div>
@@ -604,8 +604,6 @@
                 </div>
 
                 <div class = "mainCard">
-
-                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -879,9 +877,9 @@
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
+                <div class = "mainCard">
 
-                    <div class = "markedButton"> Soon </div>
+                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -903,7 +901,7 @@
                       </div>
                         </div>
 
-                       <button class = "cardButton"> $1.99</button>
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4237" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                     </div>
                 </div>
