--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div class = "mainCardBundle">
 
-                <div class = "markedButton"> Save 65% </div>
+                <div class = "markedButton"> Save 66% </div>
 
                 <div class = "upperCard">
 
@@ -138,12 +138,12 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (29+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (30+) </h3>
 
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -175,7 +175,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -206,7 +206,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -237,7 +237,7 @@
                             <div class = "infoSection">
                               <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                             </div>
                             <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -268,7 +268,7 @@
                             <div class = "infoSection">
                               <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                             </div>
                             <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -299,7 +299,7 @@
                             <div class = "infoSection">
                               <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                             </div>
                             <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -330,7 +330,7 @@
                             <div class = "infoSection">
                               <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                             </div>
                             <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -361,7 +361,7 @@
                             <div class = "infoSection">
                               <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                             </div>
                             <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -392,7 +392,7 @@
                             <div class = "infoSection">
                               <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                             </div>
                             <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -476,7 +476,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -503,7 +503,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -532,7 +532,36 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <button class = "cardButton"> $1.99</button>
+
+                    </div>
+                </div>
+
+                <div class = "mainCardSoon">
+
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
+                        <img class = "cardImage" src = "images/petalsScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Petals </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -561,7 +590,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -590,7 +619,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -617,7 +646,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -644,7 +673,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -671,7 +700,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -698,7 +727,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -754,7 +783,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -781,7 +810,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -808,7 +837,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -835,7 +864,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -848,9 +877,9 @@
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
+                <div class = "mainCard">
 
-                    <div class = "markedButton"> Soon </div>
+                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -864,7 +893,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -872,7 +901,7 @@
                       </div>
                         </div>
 
-                       <button class = "cardButton"> $1.99</button>
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4236" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                     </div>
                 </div>
@@ -893,7 +922,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -1000,7 +1029,7 @@
                                 <div class = "infoSection">
                                   <div>
                                 <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                                <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                                <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
                                 </div>
                                 <div>
                                 <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
