--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div class = "mainCardBundle">
 
-                <div class = "markedButton"> Save 66% </div>
+                <div class = "markedButton"> Save 68% </div>
 
                 <div class = "upperCard">
 
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (30+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (31+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -873,6 +873,35 @@
                         </div>
 
                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4364" target="_blank"><button class = "cardButton"> $1.99</button></a>
+
+                    </div>
+                </div>
+
+                <div class = "mainCardSoon">
+
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
+                        <img class = "cardImage" src = "images/cementeryScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Cementery </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <button class = "cardButton"> $1.99</button>
 
                     </div>
                 </div>
