--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -561,7 +561,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -619,7 +619,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -741,8 +741,6 @@
                 </div>
 
                 <div class = "mainCard">
-
-                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -877,9 +875,9 @@
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
+                <div class = "mainCard">
 
-                    <div class = "markedButton"> Soon </div>
+                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -893,7 +891,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -901,7 +899,7 @@
                       </div>
                         </div>
 
-                       <button class = "cardButton"> $1.99</button>
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4794" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                     </div>
                 </div>
@@ -922,7 +920,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -951,7 +949,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
