--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div class = "mainCardBundle">
 
-                <div class = "markedButton"> Save 68% </div>
+                <div class = "markedButton"> Save 69% </div>
 
                 <div class = "upperCard">
 
@@ -138,12 +138,12 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (31+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (32+) </h3>
 
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -175,7 +175,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -206,7 +206,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -237,7 +237,7 @@
                             <div class = "infoSection">
                               <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                            <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                             </div>
                             <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -246,6 +246,37 @@
                             </div>
 
                             <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3858" target = "_blank" draggable="false"><button class = "cardButton"> $4.00 </button></a>
+
+                        </div>
+
+                </div>
+
+                <div class = "mainCardBundle">
+
+                        <div class = "upperCard">
+
+                            <div class = "slideButtonLeft" onclick="getBundleName(squaresBundle,this)"><i class="fas fa-chevron-left"></i></div>
+                            <div class = "slideButtonRight" onclick="getBundleName(squaresBundle,this)"><i class="fas fa-chevron-right"></i></div>
+
+                            <img class = "cardImage" src = "images/squaresScreen.jpg" draggable="false" id = "squaresBundle" draggable="false">
+
+                        </div>
+                        <div class = "lowerCard">
+
+                            <h3 class = "cardTitle"> Squares (4+) </h3>
+
+                            <div class = "infoSection">
+                              <div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            </div>
+                            <div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                          </div>
+                            </div>
+
+                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4922" target = "_blank" draggable="false"><button class = "cardButton"> $4.99 </button></a>
 
                         </div>
 
@@ -268,7 +299,7 @@
                             <div class = "infoSection">
                               <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                            <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                             </div>
                             <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -299,7 +330,7 @@
                             <div class = "infoSection">
                               <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                            <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                             </div>
                             <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -330,7 +361,7 @@
                             <div class = "infoSection">
                               <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                            <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                             </div>
                             <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -361,7 +392,7 @@
                             <div class = "infoSection">
                               <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                            <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                             </div>
                             <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -392,7 +423,7 @@
                             <div class = "infoSection">
                               <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                            <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                             </div>
                             <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -476,7 +507,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -503,7 +534,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -545,9 +576,9 @@
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
+                <div class = "mainCard">
 
-                    <div class = "markedButton"> Soon </div>
+                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -569,14 +600,12 @@
                       </div>
                         </div>
 
-                       <button class = "cardButton"> $1.99</button>
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4769" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                     </div>
                 </div>
 
                 <div class = "mainCard">
-
-                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -590,7 +619,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -599,6 +628,35 @@
                         </div>
 
                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4590" target="_blank"><button class = "cardButton"> $1.99</button></a>
+
+                    </div>
+                </div>
+
+                <div class = "mainCardSoon">
+
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
+                        <img class = "cardImage" src = "images/limbsScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Limbs </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <button class = "cardButton"> $1.99</button>
 
                     </div>
                 </div>
@@ -646,7 +704,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -673,7 +731,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -700,7 +758,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -727,7 +785,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -781,7 +839,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -808,7 +866,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -835,7 +893,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -862,7 +920,7 @@
                         <div class = "infoSection">
                           <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
@@ -906,8 +964,6 @@
 
                 <div class = "mainCard">
 
-                    <div class = "markedButton"> New </div>
-
                     <div class = "upperCard">
 
                         <img class = "cardImage" src = "images/spukyScreen.jpg" draggable="false">
@@ -934,8 +990,6 @@
                 </div>
 
                 <div class = "mainCard">
-
-                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -1056,7 +1110,7 @@
                                 <div class = "infoSection">
                                   <div>
                                 <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                                <div class = "cardInfo"> <i class="fas fa-times"></i> Versa 2 </div>
+                                <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
                                 </div>
                                 <div>
                                 <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
