--- a/index.html
+++ b/index.html
@@ -547,9 +547,9 @@
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
+                <div class = "mainCard">
 
-                    <div class = "markedButton"> Soon </div>
+                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -571,7 +571,7 @@
                       </div>
                         </div>
 
-                       <button class = "cardButton"> $1.99</button>
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4500" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                     </div>
                 </div>
